Add READ_FILE func & save them in a vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCES
     src/add.cpp
     src/task.cpp
     src/add_to_file.cpp
+    src/read_file.cpp
 )
 include_directories(include)
 add_executable(app ${SOURCES})
